# fw-talk

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.github/: CODEOWNERS
arduino-blink-raw/: .gdbinit  Blink.ino.cpp  README.md  build.sh  gdb-connect.sh  open-ocd-connnect.sh  raw-build-output.txt
nano-blink-raw/: .gdbinit  README.md  build.sh  linker_script_nobl.ld
nano-raw/: 80-rpi-debug-probe.rules  README.md  blink.c  build.sh  linker_script.ld
nano-rust/: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
nano-rust/.cargo/: config.toml
nano-rust/src/: main.rs
plain-linux/: Makefile  morse.cpp  nop.c
