[package]
authors = ["Anders <anders@4zm.org>"]
edition = "2018"
readme = "README.md"
name = "nano-rust"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "1.0.0"

# this lets you use `cargo fix`!
[[bin]]
name = "nano-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
